# webview-custom-protocol

./: .gitignore
.github/workflows/: check.yaml
.opencode/: memory.db
core/: CMakeLists.txt
core/include/webview/: api.h  c_api_impl.hh
core/include/webview/detail/: engine_base.hh
core/include/webview/detail/backends/: cocoa_webkit.hh  gtk_webkitgtk.hh  win32_edge.hh
core/include/webview/detail/platform/linux/webkitgtk/: dmabuf.hh
core/include/webview/detail/utility/: assets.hh  string.hh
core/tests/src/: unit_tests.cc
examples/: CMakeLists.txt  assets_mapping_rpc.cc
examples/resources/: index.html  script.js  style.css
